💄  Alignment fixes

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -540,3 +540,15 @@ abbr[title] {
 h1 + div.spectrum-Body--M {
   margin-top: 1.5rem;
 }
+
+/* Temporary Overrides */
+
+/* Aligns magnifying glass in search field */
+div input[aria-label="Search"] ~ svg {
+  top: var(--spectrum-global-dimension-size-85) !important;
+}
+
+/* Properly sizes Action Buttons */
+button[type="button"] svg {
+  padding-left: 0px !important;
+}
